layout issues

--- a/src/home/home.scss
+++ b/src/home/home.scss
@@ -7,7 +7,7 @@ div.main-panel {
     > div {
 
         /* See the note in home.ts L62 */
-        height: calc(100vh - 606px);
+        height: calc(100vh - 557px);
         //min-height: 200px;
 
         margin-top: 15px;
